docs: fix layout issue (#1586)

--- a/docs/src/styles.css
+++ b/docs/src/styles.css
@@ -39,10 +39,6 @@ table code {
   max-width: 900px;
 }
 
-a {
-  display: inline-block;
-}
-
 @media (min-width: 77rem) {
   [data-has-sidebar][data-has-toc] .main-pane {
     width: auto;
